@@ -8,7 +8,7 @@
 ControlMachine={{ controlmachine }}
 AuthType=auth/munge
 CoreSpecPlugin=cray
-CryptoType=crypto/munge
+CredType=cred/munge
 GresTypes={{ grestypes|join(',') }}
 JobContainerType=job_container/cncu
 JobSubmitPlugins=cray
