@@ -15,7 +15,7 @@ ControlMachine=sdb
 AuthType=auth/munge
 #CheckpointType=checkpoint/none
 CoreSpecPlugin=cray
-CryptoType=crypto/munge
+CredType=cred/munge
 #DisableRootJobs=NO
 EnforcePartLimits=any
 #Epilog=
