@@ -1,14 +1,14 @@
 <!--#include virtual="header.txt"-->
 
-<h1><a name="top">Slurm Cryptographic Plugin Programmer Guide</a></h1>
+<h1><a name="top">Slurm Credential Plugin Programmer Guide</a></h1>
 
 <h2> Overview</h2>
-<p> This document describe. Slurm cryptographic plugins and the API that
+<p> This document describe. Slurm credential plugins and the API that
 defines them.
 It is intended as a resource to programmers wishing to write their own
-Slurm cryptographic plugins.</p>
+Slurm credential plugins.</p>
 
-<p>Slurm cryptographic plugins are Slurm plugins that implement
+<p>Slurm credential plugins are Slurm plugins that implement
 a digital signature mechanism.
 The slurmctld daemon generates a job step credential, signs it,
 and transmits it to an srun program.
@@ -22,9 +22,9 @@ The plugins must conform to the Slurm Plugin API with the following
 specifications:</p>
 
 <p><span class="commandline">const char plugin_type[]</span><br>
-The major type must be &quot;crypto.&quot;
+The major type must be &quot;cred.&quot;
 The minor type can be any recognizable abbreviation for the type of
-cryptographic mechanism.
+credential mechanism.
 We recommend, for example:</p>
 <ul>
 <li><b>munge</b> &mdash; LLNL's Munge system.</li>
@@ -116,7 +116,7 @@ by cred_p_read_private_key() or cred_p_read_public_key().</p>
 
 <p class="commandline">char *cred_p_str_error(void);</p>
 <p style="margin-left:.2in"><b>Description</b>: Return a string
-describing the last error generated by the cryptographic software.</p>
+describing the last error generated by the credential software.</p>
 <p style="margin-left:.2in"><b>Returns</b>: A pointer to a string.</p>
 
 <p class="commandline">int cred_p_sign(void *key, char *buffer, int buf_size,
@@ -163,6 +163,6 @@ On failure, the plugin should return SLURM_ERROR and set the errno to an
 appropriate value to indicate the reason for failure.</p>
 
 
-<p style="text-align:center;">Last modified 2 November 2018</p>
+<p style="text-align:center;">Last modified 7 January 2019</p>
 
 <!--#include virtual="footer.txt"-->
