@@ -111,7 +111,7 @@ behavior. A separate subdirectory is used for each plugin class:<br>
 <li><b>accounting_storage</b> for specifying the type of storage for accounting,<br>
 <li><b>auth</b> for user authentication,<br>
 <li><b>checkpoint</b> for system-initiated checkpoint and restart of user jobs,<br>
-<li><b>crypto</b> for cryptographic functions,<br>
+<li><b>cred</b> for job credential functions,<br>
 <li><b>jobacct_gather</b> for job accounting,<br>
 <li><b>jobcomp</b> for job completion logging,<br>
 <li><b>mpi</b> for MPI support,<br>
@@ -326,6 +326,6 @@ systemctl start/stop/restart slurmd@nodeXYZ
 
 </p>
 
-<p style="text-align:center;">Last modified 2 November 2016</p>
+<p style="text-align:center;">Last modified 7 January 2019</p>
 
 <!--#include virtual="footer.txt"-->
