@@ -1,0 +1,3 @@
+# Makefile for cred plugins
+
+SUBDIRS = munge
