@@ -1,3 +1,0 @@
-# Makefile for crypto plugins
-
-SUBDIRS = munge
